syntax = "proto3";

option go_package = "internal/generated/broker/consume/uziupload";

message UziUpload {
  string uzi_id = 100;
}